tests/parser/tests/cases/should_fail/invalid_unicode_char/case.hash
let k = '\u{00000000000}'; // This is an invalid unicode char as it too big.
